tests/sksl/errors/ReservedNameSampler2DRectShadow.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'sampler2DRectShadow'
1 error
